uneccesary files removed

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ Debug
 *.dcu
 *.o
 *.obj
+# enthält u.a. Info über alle(!) geladene Dateien in der IDE, auch nicht projektbezogene und/oder schon geschlossene!
+*.dsk
 # Batch-Dateien und Doxygen-Konfigurationsdatei außer Doxygen.bat:
 # --> Doxygen.bat explizit zu .git hinzufügen (git add....)!
 *.bat
